--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "expensetrackerapp",
   "version": "0.1.0",
-  "homepage":"https://Chissypre.github.io/expensetrackerapp",
+  "homepage": "https://Chissypre.github.io/expensetrackerapp",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
